--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <header id="header" role="banner">
       
     <div class="alert-message warning" role="alert">
+        <a class="close" href="#">&times;</a>
         <p>The old monks of Dunfermline were very fond of them. They had a great porpoise grant from the crown.</p>
     </div>  
     
