--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <link href="stylesheets/core.css?v=1" rel="stylesheet" media="screen" />
   <link href="stylesheets/modules.css?v=1" rel="stylesheet" media="screen" />
   <link href="stylesheets/core_print.css?v=1" rel="stylesheet" media="print" />
-  
+    
+    <!-- Modernizer <script src="javascripts/libs/modernizr.custom.21747.js"></script> -->
+    
   	<!--[if lt IE 9]>
 		<script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'></script>
 		<script src='javascripts/libs/respond.min.js'></script>
